force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/PMC_SS_AccountPartnerRelationships__c.object-meta.xml
<CustomObject>
    <description>This junction object is used to store Partner relationships related to the Account.</description>
    <label>Account Partner Relationship</label>
    <nameField>
        <label>Account Partner Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Partner Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>