force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/Account_SAP_ID_N__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_ID_N__c</fullName>
    <formula>PMC_SS_Account__r.PMC_SS_SAPCustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SAP ID N</label>
    <type>Text</type>
</CustomField>