force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_Expansion_Origin__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Expansion_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates that the relationship was created after an expansion</description>
    <label>Expansion Origin</label>
    <type>Checkbox</type>
</CustomField>