force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_SAPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPCustomerNumber__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.PMC_SS_SAPCustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Code</label>
    <type>Text</type>
</CustomField>