force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingCity__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.ShippingCity</formula>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>