force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingCountry__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.ShippingCountry</formula>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>