force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_ShippingStateProvince__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingStateProvince__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.ShippingState</formula>
    <label>Shipping State/Province</label>
    <type>Text</type>
</CustomField>