force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingStreet__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.ShippingStreet</formula>
    <label>Shipping Street</label>
    <type>Text</type>
</CustomField>