force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_ShippingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingZipPostalCode__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.ShippingPostalCode</formula>
    <label>Shipping Zip/Postal Code</label>
    <type>Text</type>
</CustomField>