force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_StateTaxNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_StateTaxNumber__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.PMC_SS_StateTaxNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Tax Number</label>
    <type>Text</type>
</CustomField>