force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_TaxID_or_CPF__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TaxID_or_CPF__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.PMC_SS_CPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ/CPF</label>
    <type>Text</type>
</CustomField>