force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_TaxIDOrCNPJOrCPF__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TaxIDOrCNPJOrCPF__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.PMC_SS_TaxIDOrCNPJOrCPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID/CNPJ/CPF</label>
    <type>Text</type>
</CustomField>