force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_CPQ_TransportationZone__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TransportationZone__c</fullName>
    <formula>PMC_SS_RelatedAccount__r.PMC_SS_TransportationZone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transportation Zone</label>
    <type>Text</type>
</CustomField>