force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_SS_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Account__c</fullName>
    <description>This field is used to look up to sold-to master</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sold-to</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Partner Accounts</relationshipLabel>
    <relationshipName>PMC_SS_RelatedSoldToAccounts1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>