force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_SS_AccountSAPID__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountSAPID__c</fullName>
    <label>Account SAP ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>