force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_SS_ExternalUniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
    <description>Stores unique identifier of record with concatenation of:  Account SAP Customer Id  + Related Account SAP customer Id  + Account type</description>
    <externalId>true</externalId>
    <label>External Unique Identifier</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>