force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_SS_RelatedAccountSalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RelatedAccountSalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Concatenation of Account SAP ID + Sales Org + Divison + Distribution Channel.</description>
    <label>Related Account Sales Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PMC_SS_AccountSalesAreaRelationship__c.PMC_SS_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.PMC_SS_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMC_SS_AccountSalesAreaRelationship__c</referenceTo>
    <relationshipLabel>Account Partner Relationships</relationshipLabel>
    <relationshipName>Account_Partner_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>