force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_SS_RelatedAccountSAPId__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RelatedAccountSAPId__c</fullName>
    <description>Stores SAP Customer Id of Bill-to/Payer/Ship-to Accounts.</description>
    <label>Related Account SAP ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>