force-app/main/default/objects/PMC_SS_AccountPartnerRelationships__c/fields/PMC_SS_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Type__c</fullName>
    <defaultValue>(&quot;Ship-to&quot;)</defaultValue>
    <description>Specifies the relation of the two Accounts</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ship-to</fullName>
                <default>true</default>
                <label>Ship-to</label>
            </value>
            <value>
                <fullName>Bill-to</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>